# gemini-runtime

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
hooks/: session_end.sh  tool_call_after.sh  tool_call_before.sh
infra/clickhouse/: init.sql
infra/postgres/: init.sql
infra/redis/: redis.conf
mcp/: package.json
mcp/executor-tools/: gemini-extension.json  package.json
mcp/executor-tools/src/: index.ts
mcp/planner-tools/: gemini-extension.json  package.json
mcp/planner-tools/src/: index.ts
mcp/researcher-tools/: gemini-extension.json  package.json
mcp/researcher-tools/src/: index.ts
mcp/verifier-tools/: gemini-extension.json  package.json
mcp/verifier-tools/src/: index.ts
migrations/: alembic.ini  env.py
migrations/versions/: 0001_initial_schema.py
scripts/: health_check.py  replay_session.py  seed_demo.py
services/agent_worker/: Dockerfile
services/agent_worker/agent_worker/: base_agent.py  event_emitter.py  gemini_runner.py  main.py  stream_parser.py
services/analytics/: Dockerfile
services/analytics/analytics/: main.py  queries.py  regression.py  router.py  slo_evaluator.py
services/api/: Dockerfile
services/api/api/: main.py  router.py  ws.py
services/ingestion/: Dockerfile
services/ingestion/ingestion/: consumer.py  main.py  (+3 more)
services/orchestrator/: Dockerfile
shared/: config.py
shared/db/: clickhouse.py  postgres.py  redis_client.py
shared/messaging/: schemas.py  streams.py
shared/models/: events.py  sessions.py  tasks.py  tools.py
shared/telemetry/: cost.py  otel.py  slo.py
(+15 files in other folders)
